--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,100 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* CSS styling for JSX elements in MatchGame class component  - Start */
+
+.match-game-bg-container {
+  background-image: url('https://assets.ccbp.in/frontend/react-js/match-game-bg.png');
+  background-size: cover;
+  min-height: 100vh;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+/* CSS styling for JSX elements in MatchGame class component  - End */
+
+/* CSS styling for JSX elements in GameHeader class component - Start */
+
+.game-header-bg-container {
+  background-color: #2c0e3a;
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.game-brand-img {
+  height: 2rem;
+  width: 8rem;
+}
+
+.game-header-content-container,
+.game-attribute-container {
+  display: flex;
+  align-items: center;
+}
+
+.game-attribute-name {
+  color: #ffffff;
+  font-size: 1.2rem;
+  font-weight: 550;
+}
+
+.game-attribute-img {
+  height: 1.2rem;
+  width: 1.2rem;
+}
+
+.game-attribute-container {
+  margin-right: 1.2rem;
+}
+
+.game-attribute-name,
+.game-attribute-img {
+  margin-right: 0.5rem;
+}
+
+.game-attribute-value {
+  color: #fec653;
+  font-size: 1.5rem;
+  font-weight: 550;
+}
+
+/* CSS styling for JSX elements in GameHeader class component - End */
+
+@media (min-width: 768px) {
+  /* CSS styling for JSX elements in GameHeader class component - Start */
+
+  .game-header-bg-container {
+    padding: 1rem 2rem;
+  }
+
+  .game-brand-img {
+    height: 3rem;
+    width: 12rem;
+  }
+
+  .game-attribute-container {
+    margin-right: 1.5rem;
+  }
+
+  .game-attribute-name {
+    color: #ffffff;
+    font-size: 1rem;
+    font-weight: 550;
+  }
+
+  .game-attribute-img {
+    height: 1.5rem;
+    width: 1.5rem;
+  }
+
+  .game-attribute-value {
+    font-size: 1.5rem;
+  }
+  /* CSS styling for JSX elements in GameHeader class component - End */
+}
