--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
 
 /* CSS styling for JSX elements in MatchGame class component  - End */
 
-/* CSS styling for JSX elements in GameHeader class component - Start */
+/* CSS styling for JSX elements in GameHeader component - Start */
 
 .game-header-bg-container {
   background-color: #2c0e3a;
@@ -73,7 +73,80 @@ body {
   font-weight: 550;
 }
 
-/* CSS styling for JSX elements in GameHeader class component - End */
+/* CSS styling for JSX elements in GameHeader component - End */
+
+/* CSS styling for JSX elements in GameArea component - Start */
+
+.game-area-bg-container {
+  height: 80%;
+  width: 100%;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.game-area-match-image {
+  width: 100%;
+  height: 30%;
+  margin: 0;
+  padding: 0;
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+  margin-bottom: 2rem;
+}
+
+.game-area-img-category-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+  padding-left: 0;
+  margin-bottom: 2rem;
+  width: 100%;
+  height: 15%;
+}
+
+.game-area-img-category {
+  background: inherit;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: 'Roboto';
+  font-size: 1.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.selected-img-category {
+  color: #fec653;
+  border-bottom: 0.1rem solid #fec653;
+}
+
+.thumbnail-images-list {
+  width: 100%;
+  height: 55%;
+  list-style-type: none;
+  padding-left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.thumbnail-image {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+  margin-bottom: 0.5rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 0.2rem;
+}
+
+/* CSS styling for JSX elements in GameArea component - End */
 
 @media (min-width: 768px) {
   /* CSS styling for JSX elements in GameHeader class component - Start */
